# janusb-1

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
conf/: janus.plugin.serial.cfg.sample
example/stm32f4/: .cproject
example/stm32f4/include/: lis3dsh.h  stm32f4_discovery_accelerometer.h  stm32f4xx_it.h
example/stm32f4/src/: main.c  main.h  stm32f4xx_it.c
html/: serial.html  serial.js
plugin/: libjanus_serial.c  libjanus_serial2.c  libjanus_serial_backup.c
test/: main.c  modello json
